fix: remove infinite scroll and fix scrollbars

--- a/app/assets/stylesheets/_notes.scss
+++ b/app/assets/stylesheets/_notes.scss
@@ -101,10 +101,6 @@ notes-view {
     }
   }
 
-  .scrollable {
-    height: 100%;
-  }
-
   .infinite-scroll {
     overflow-x: hidden;
     height: inherit;
