--- a/app/assets/stylesheets/_scrollbar.scss
+++ b/app/assets/stylesheets/_scrollbar.scss
@@ -3,28 +3,39 @@
   $foreground-color,
   $background-color: mix($foreground-color, white, 50%)
 ) {
-  scrollbar-color: $background-color $background-color;
-
-  // For Google Chrome
-  &::-webkit-scrollbar {
-    width: $size;
-    height: $size;
-  }
-
-  &::-webkit-scrollbar-thumb {
-    // transition: all 0.5s ease-in;
-    background: $foreground-color;
-    border-radius: 0.5rem;
-  }
-
-  &::-webkit-scrollbar-track {
-    // transition: all 0.5s ease-in;
-    background: $background-color;
-  }
+  scrollbar-color: $foreground-color $background-color;
 
   // For Internet Explorer
   & {
-    // transition: scrollbar-face-color 0.5s ease-in;
     scrollbar-face-color: $foreground-color;
+  }
+
+  &:hover::-webkit-scrollbar {
+    display: initial;
+  }
+
+  &::-webkit-scrollbar {
+    display: none;
+  }
+
+  &::-webkit-scrollbar {
+    width: $size;
+  }
+
+  &::-webkit-scrollbar-track {
+    background-color: $background-color;
+    border-width: 0;
+  }
+
+  &::-webkit-scrollbar-thumb {
+    border-radius: 0.5rem;
+    background-color: $foreground-color;
+  }
+
+  &::-webkit-scrollbar-button,
+  &::-webkit-scrollbar-track-piece,
+  &::-webkit-scrollbar-corner,
+  &::-webkit-resizer {
+    display: none;
   }
 }
