--- a/app/assets/stylesheets/_tags.scss
+++ b/app/assets/stylesheets/_tags.scss
@@ -4,21 +4,24 @@
   width: 100%;
 }
 
-.tags .scrollable,
-.tags .infinite-scroll {
-  @include scrollbars(
-    0.5rem,
-    rgba(0, 0, 0, 0),
-    var(--sn-stylekit-secondary-background-color)
-  );
+.tags .scrollable {
+  @include scrollbars(0.4rem, var(--sn-stylekit-info-color), rgba(0, 0, 0, 0));
 
-  &:hover {
-    @include scrollbars(
-      0.5rem,
-      var(--sn-stylekit-info-color),
-      var(--sn-stylekit-secondary-background-color)
-    );
-  }
+  height: 100%;
+  overflow-x: hidden;
+  overflow-y: overlay;
+
+  // // Autohide scrollbar on Windows.
+  // @at-root {
+  //   .windows-web &,
+  //   .windows-desktop & {
+  //     overflow-y: hidden;
+  //     &:hover {
+  //       overflow-y: auto;
+  //       overflow-y: overlay; // overlay is not supported on ff, so keep previous statement up
+  //     }
+  //   }
+  // }
 }
 
 .tags {
@@ -44,27 +47,6 @@
     padding-left: 12px;
     padding-right: 12px;
     font-size: 12px;
-  }
-
-  .scrollable {
-    height: 100%;
-  }
-
-  .infinite-scroll {
-    overflow-x: hidden;
-    height: inherit;
-
-    // Autohide scrollbar on Windows.
-    @at-root {
-      .windows-web &,
-      .windows-desktop & {
-        overflow-y: hidden;
-        &:hover {
-          overflow-y: auto;
-          overflow-y: overlay; // overlay is not supported on ff, so keep previous statement up
-        }
-      }
-    }
   }
 
   .no-tags-placeholder {
